syntax = "proto3";
package lavanet.lava.pairing;
import "gogoproto/gogo.proto";
import "lavanet/lava/pairing/relay.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/lavanet/lava/x/pairing/types";

service RelayerCache {
    rpc GetRelay (RelayCacheGet) returns (RelayReply) {}
    rpc SetRelay (RelayCacheSet) returns (google.protobuf.Empty) {}
    rpc Health (google.protobuf.Empty) returns (CacheUsage) {}
}

message CacheUsage {
    uint64 CacheHits =1;
    uint64 CacheMisses =2;
}

message RelayCacheGet {
    RelayPrivateData request =1;
    bytes blockHash =2;
    string chainID = 3; //Used to differentiate between different chains so each has its own bucket
    bool finalized =4;
    string provider =5;
}

message RelayCacheSet {
    RelayPrivateData request =1;
    bytes blockHash =2;
    string chainID = 3; //Used to differentiate between different chains so each has its own bucket
    RelayReply response =4;
    bool finalized =5;
    string provider =6;
}